name:                haskell-gi-examples
version:             0.1
synopsis:            Some examples of the use of haskell-gi generated libraries
description:         Some examples of the use of haskell-gi generated libraries
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Iñaki García Etxebarria
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable SimpleBrowser
  main-is:             SimpleBrowser.hs
  build-depends:       base >= 4.7 && < 5,
                       basic-prelude >= 0.5 && <0.6,
                       haskell-gi-base >= 0.12 && < 1,
                       gi-glib >= 0.2.44 && < 1,
                       gi-gtk >= 0.3.16 && < 1,
                       gi-webkit2 >= 0.2.8 && < 1,
                       text >= 1.0

  extensions:          OverloadedStrings, NoImplicitPrelude
  ghc-options:         -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing
  other-modules:       GI.OverloadedLabels,
                       GI.Signals
