name:                haskell-gi-examples
version:             0.1
synopsis:            Some examples of the use of haskell-gi generated libraries
description:         Some examples of the use of haskell-gi generated libraries
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Iñaki García Etxebarria
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable SimpleBrowser
  main-is:             SimpleBrowser.hs
  build-depends:       base >= 4.7 && < 5,
                       basic-prelude >= 0.5 && <0.6,
                       haskell-gi-base >= 0.20 && < 1,
                       gi-glib == 2.0.*,
                       gi-gtk == 3.0.*,
                       gi-webkit2 == 4.0.*,
                       text >= 1.0

  extensions:          OverloadedStrings, NoImplicitPrelude
  ghc-options:         -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing
  other-modules:       GI.OverloadedLabels,
                       GI.Signals

executable Cairo
  main-is:              Cairo.hs
  build-depends:        base >= 4.7 && < 5,
                        haskell-gi-base >= 0.20 && < 1,
                        gi-glib == 2.0.*,
                        gi-cairo == 1.0.*,
                        gi-gdk == 3.0.*,
                        gi-gdkpixbuf == 2.0.*,
                        gi-gtk == 3.0.*,
                        cairo == 0.13.*,
                        old-time == 1.1.*,
                        transformers == 0.5.*
  other-extensions:     OverloadedStrings, OverloadedLabels
  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures

executable DBusServer
  main-is:              DBusServer.hs
  build-depends:        base >= 4.7 && < 5,
                        haskell-gi-base >= 0.20 && < 1,
                        gi-glib == 2.0.*,
                        gi-gio == 2.0.*,
                        text == 1.2.*
  other-extensions:     OverloadedStrings, OverloadedLabels, LambdaCase
  ghc-options:         -Wall -fwarn-incomplete-patterns

executable GstHelloWorld
  main-is:              GstHelloWorld.hs
  build-depends:        base >= 4.7 && < 5,
                        haskell-gi-base,
                        gi-glib,
                        gi-gst,
                        text
  other-extensions:     OverloadedStrings, OverloadedLabels
  ghc-options:         -Wall
