Name:           gi-cairo-connector
Version:        0.0.1
License:        BSD3
License-file:   COPYRIGHT
Copyright:      (c) 2018 Kilian Kilger
Author:         Kilian Kilger
Maintainer:     Kilian Kilger (kkilger@gmail.com)
Build-Type:     Simple
Cabal-Version:  >= 1.24
Stability:      experimental
homepage:       https://github.com/cohomology/gi-cairo-render
bug-reports:    https://github.com/cohomology/gi-cairo-render/issues
Synopsis:       GI friendly Binding to the Cairo library.
Description:    This library contains glue code used to interconnect Haskell GI and Cairo
Category:       Graphics
Tested-With:    GHC == 8.2.2, GHC == 8.0.2

Source-Repository head
  type:         git
  location:     https://github.com/cohomology/gi-cairo-render
  subdir:       gi-cairo-connector

Library
        build-depends:  base >= 4 && < 5,
                        haskell-gi-base >=0.21.0 && <1,
                        gi-cairo >= 1.0 && <2,
                        gi-cairo-render == 0.0.*
        exposed-modules:  GI.Cairo.Render.Connector
        default-language: Haskell2010
