name:                haskell-gi-test
version:             0.1
synopsis:            Tests of haskell-gi
Description:         Tests of haskell-gi
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       1.24

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable testGtk
  default-language:    Haskell2010
  main-is:             testGtk.hs
  build-depends:       base >= 4.9 && < 5,
                       bytestring >= 0.10,
                       containers >= 0.5 && < 0.7,
                       random >= 1.1 && < 1.2,
                       haskell-gi-base >= 0.22 && < 1,
                       haskell-gi-overloading == 1.0.*,
                       gi-glib == 2.0.*,
                       gi-gdk == 3.0.*,
                       gi-gio == 2.0.*,
                       gi-gobject == 2.0.*,
                       gi-gtk == 3.0.*,
                       text >= 1.0

  other-extensions:    OverloadedStrings, OverloadedLabels, LambdaCase, ScopedTypeVariables
  ghc-options:         -Wall -Wcompat -fwarn-incomplete-patterns -fno-warn-name-shadowing -threaded -with-rtsopts=-N
