Name:                GI-Gtk-Test
Version:             0.1
Synopsis:            Tests of GObject-Introspection
Description:         Tests of GObject-Introspection
Homepage:            https://github.com/garetxe/haskell-gi
License:             LGPL-3
Author:              Will Thompson,
                     Iñaki García Etxebarria,
                     Jonas Platte
Maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.8

source-repository head
  type: git
  location: git://github.com/garetxe/haskell-gi.git

Executable testGtk
  main-is: testGtk.hs
  pkgconfig-depends: gtk+-3.0 >= 3.14 && < 4
  build-depends:
      base >= 4.7 && < 5,
      basic-prelude >= 0.5 && <0.6,
      bytestring >= 0.10,
      containers >= 0.5 && < 0.6,
      random >= 1.1 && < 1.2,
      GObject-Introspection >= 0.6 && < 0.7,
      gi-glib >= 0.2.44 && < 0.3,
      gi-gdk >= 0.3.16 && < 0.4,
      gi-gio >= 0.2.44 && < 0.3,
      gi-gtk >= 0.3.16 && < 0.4,
      text >= 1.0
  extensions: OverloadedStrings, NoImplicitPrelude, DoAndIfThenElse, LambdaCase
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing
  other-modules:
      GI.Properties,
      GI.Signals
