cabal-version:  2.2
name:           gtk4-example
version:        0.1
synopsis:       An example of Gtk4 usage.
description:    Please see the README on Github at <https://github.com/githubuser/exercises#readme>
author:         Iñaki García Etxebarria
maintainer:     Iñaki García Etxebarria
copyright:      2020 Iñaki García Etxebarria
license:        LGPL-2.1-or-later
build-type:     Simple

executable gtk4-example
  main-is: gtk4-example.hs
  ghc-options: -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , gi-gtk == 4.0.*
    , haskell-gi-base
  default-language: Haskell2010
