cabal-version:      3.0
name:               HListStore
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Iñaki García Etxebarria
maintainer:         git@inaki.blueleaf.cc
build-type:         Simple

common warnings
    ghc-options: -Wall

executable HListStore
    import:           warnings
    main-is:          test.hs
    other-modules:    GOWrapper,
                      HListStore
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      haskell-gi-base,
                      gi-gobject,
                      gi-gio,
                      text
    default-language: Haskell2010
