cabal-version:      3.0
name:               HListStore
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Iñaki García Etxebarria
maintainer:         git@inaki.blueleaf.cc
build-type:         Simple

common warnings
    ghc-options: -Wall

executable HListStore
    import:           warnings
    main-is:          test.hs
    -- other-extensions:
    build-depends:    base >=4.11.0.0 && <5,
                      haskell-gi-base,
                      gi-gobject,
                      gi-gio >= 2.0.36,
                      text,
                      declarative-gtk ^>= 0.1.0.0
    default-language: Haskell2010
