name:                libhandy-demo-hs
version:             0.1.0.0
synopsis:            Example for using gi-Handy
description:         A haskell port of the libhandy examples, using gi-handy.
homepage:            https://github.com/tsahyt/libhandy-demo-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2019 Paul Ogris
category:            Mobile
build-type:          Simple
cabal-version:       2.0
extra-source-files:  README.md

executable libhandy-demo-hs
  hs-source-dirs:      src
  c-sources:           res/resources.c
  main-is:             Main.hs
  other-modules:       DemoWindow
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gi-handy,
                       gi-gtk >= 3.0.32 && < 4.0,
                       gi-gio,
                       gi-gdk,
                       text,
                       gi-gtk-hs,
                       file-embed,
                       haskell-gi-base ^>= 0.24.0
