name:                webkit-example
version:             0.1
synopsis:            An example of using gi-webkit2
description:         An example of using gi-webkit2
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Iñaki García Etxebarria
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       2.0

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

foreign-library simple-webextension
  type:                native-shared
  lib-version-info:    0:0:1

  if os(Windows)
    options: standalone

  pkgconfig-depends: webkit2gtk-web-extension-4.0

  ghc-options:         -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing -threaded

  other-modules:       SimpleExtension,
                       DBusHelpers,
                       DBusServersInfo

  build-depends:       base >=4.7 && <5,
                       haskell-gi-base ^>= 0.24.0,
                       gi-webkit2webextension == 4.0.*,
                       gi-gio == 2.0.*,
                       text >= 1.0
  c-sources:           SimpleExtensionInit.c
  default-language:    Haskell2010

executable SimpleBrowser
  main-is:             SimpleBrowser.hs

  other-modules:       DBusHelpers,
                       DBusServersInfo

  build-depends:       base >= 4.7 && < 5,
                       haskell-gi-base ^>= 0.24.0,
                       gi-glib == 2.0.*,
                       gi-gio == 2.0.*,
                       gi-gtk == 3.0.*,
                       gi-webkit2 == 4.0.*,
                       text >= 1.0
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, OverloadedLabels
  ghc-options:         -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing -threaded -with-rtsopts=-N

