name:                haskell-gi-examples
version:             0.1
synopsis:            Some examples of the use of haskell-gi generated libraries
description:         Some examples of the use of haskell-gi generated libraries
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Iñaki García Etxebarria
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       2.0

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable Cairo
 main-is:              Cairo.hs
 build-depends:        base >= 4.9 && < 5,
                       haskell-gi-base ^>= 0.24.0,
                       gi-glib == 2.0.*,
                       gi-cairo == 1.0.*,
                       gi-gdk == 3.0.*,
                       gi-gdkpixbuf == 2.0.*,
                       gi-gtk == 3.0.*,
                       cairo == 0.13.*,
                       old-time == 1.1.*,
                       transformers == 0.5.*
 default-language:     Haskell2010
 other-extensions:     OverloadedStrings, OverloadedLabels
 ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures -threaded -with-rtsopts=-N

executable DBusServer
  main-is:              DBusServer.hs
  build-depends:        base >= 4.9 && < 5,
                        haskell-gi-base ^>= 0.24.0,
                        gi-glib == 2.0.*,
                        gi-gio == 2.0.*,
                        text == 1.2.*
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings, OverloadedLabels, LambdaCase
  ghc-options:         -Wall -fwarn-incomplete-patterns -threaded -with-rtsopts=-N

executable GstHelloWorld
  main-is:              GstHelloWorld.hs
  build-depends:        base >= 4.9 && < 5,
                        haskell-gi-base ^>= 0.24.0,
                        gi-glib,
                        gi-gst,
                        text
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings, OverloadedLabels
  ghc-options:         -Wall -threaded -with-rtsopts=-N

executable GstGtkX11
  main-is:              GstGtkX11.hs
  build-depends:        base >= 4.9 && < 5
                      , gi-gst == 1.0.*
                      , gi-gtk == 3.0.*
                      , gi-xlib
                      , gi-gstvideo
                      , gi-gdk
                      , gi-gdkx11
                      , haskell-gi-base ^>= 0.24.0
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings
  ghc-options:          -O -threaded -with-rtsopts=-N -Wall

executable gtk-emit-signal
  main-is:            GtkEmitSignal.hs
  build-depends:        base >= 4.9 && < 5
                      , haskell-gi-base ^>= 0.24.0
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , text
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -with-rtsopts=-N -Wall

executable CustomGObject
  main-is:            CustomGObject.hs
  other-modules:      CustomContainer
  build-depends:        base >= 4.9 && < 5
                      , haskell-gi ^>= 0.24.0
                      , haskell-gi-base ^>= 0.24.0
                      , gi-gtk == 3.0.*
                      , gi-gdk == 3.0.*
                      , vector
                      , text
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -with-rtsopts=-N -Wall
