name:                haskell-gi-examples
version:             0.1
synopsis:            Some examples of the use of haskell-gi generated libraries
description:         Some examples of the use of haskell-gi generated libraries
homepage:            https://github.com/haskell-gi/haskell-gi
license:             LGPL-3
author:              Iñaki García Etxebarria
maintainer:          Iñaki García Etxebarria (garetxe@gmail.com)
stability:           Experimental
category:            Development
build-type:          Simple
cabal-version:       2.0

source-repository head
  type: git
  location: git://github.com/haskell-gi/haskell-gi.git

executable DBusServer
  main-is:              DBusServer.hs
  build-depends:        base >= 4.9 && < 5,
                        haskell-gi-base ^>= 0.26.0,
                        gi-glib == 2.0.*,
                        gi-gio == 2.0.*,
                        text >= 1.2 && <3
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings, OverloadedLabels, LambdaCase
  ghc-options:         -Wall -fwarn-incomplete-patterns -threaded -with-rtsopts=-N

executable GstHelloWorld
  main-is:              GstHelloWorld.hs
  build-depends:        base >= 4.9 && < 5,
                        haskell-gi-base ^>= 0.26.0,
                        gi-glib,
                        gi-gst,
                        text
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings, OverloadedLabels
  ghc-options:         -Wall -threaded -with-rtsopts=-N

executable GstGtkX11
  main-is:              GstGtkX11.hs
  build-depends:        base >= 4.9 && < 5
                      , gi-gst == 1.0.*
                      , gi-gtk3
                      , gi-xlib
                      , gi-gstvideo
                      , gi-gdk3
                      , gi-gdkx113
                      , haskell-gi-base ^>= 0.26.0
  default-language:     Haskell2010
  other-extensions:     OverloadedStrings
  ghc-options:          -O -threaded -with-rtsopts=-N -Wall

executable gtk-emit-signal
  main-is:            GtkEmitSignal.hs
  build-depends:        base >= 4.9 && < 5
                      , haskell-gi-base ^>= 0.26.0
                      , gi-gobject
                      , gi-glib
                      , gi-gtk3
                      , text
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -with-rtsopts=-N -Wall

executable CustomGObject
  main-is:            CustomGObject.hs
  other-modules:      CustomContainer
  build-depends:        base >= 4.9 && < 5
                      , haskell-gi >= 0.26.10
                      , haskell-gi-base >= 0.26.6
                      , gi-gtk3 >= 3.0.43
                      , gi-gdk3
                      , vector
                      , text
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -with-rtsopts=-N -Wall
