name:           haskell-gi-i18n
version:        0.1.0.0
description:    Please see the README on Github at <#https://github.com/Nimmerwoner/i18n-haskell-gtk.gitreadme>
homepage:       https://github.com/Nimmerwoner/i18n-haskell-gtk.gitreadme
bug-reports:    https://github.com/Nimmerwoner/i18n-haskell-gtk.gitissues
author:         Arthur Nieuwland
maintainer:     anieuwland@nimmerfort.eu
copyright:      No one
license:        PublicDomain
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Nimmerwoner/i18n-haskell-gtk.git

executable i18n
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-name-shadowing -fno-warn-unused-do-bind -threaded -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text
    , haskell-gi-base
    , gi-gobject
    , gi-gtk3
  default-language: Haskell2010
