Name:           gi-cairo-render-clock
Version:        0.0.1
License:        BSD3
License-file:   LICENSE
Copyright:      (c) 2018 Kilian Kilger, (c) 2001-2010 The Gtk2Hs Team, (c) Paolo Martini 2005, (c) Abraham Egnor 2003, 2004, (c) Aetion Technologies LLC 2004
Author:         Axel Simon, Duncan Coutts
Maintainer:     Kilian Kilger (kkilger@gmail.com)
Build-Type:     Simple
Cabal-Version:  >= 1.24
Stability:      experimental
homepage:       https://github.com/cohomology/gi-cairo-render
bug-reports:    https://github.com/cohomology/gi-cairo-render/issues
Synopsis:       Clock demo for cairo-render
Description:    Clock demo for cairo-render
Category:       Graphics
Tested-With:    GHC == 8.2.2, GHC == 8.0.2

Source-Repository head
  type:         git
  location:     https://github.com/cohomology/gi-cairo-render
  subdir:       examples/clock

Executable cairo-clock-demo
        build-depends:    base >= 4 && < 5,
                          time >= 1.8 && <2,
                          text >= 1.2 && <1.3,
                          gi-cairo >=1.0.15 && <1.1, 
                          gi-gdk >=3.0.15 && <3.1, 
                          gi-glib >=2.0.16 && <2.1, 
                          gi-gtk >=3.0 && <3.1,
                          gi-cairo-render == 0.0.*,
                          gi-cairo-connector == 0.0.*
        main-is:          Clock.hs 
        default-language: Haskell2010
